--- a/index.html
+++ b/index.html
@@ -11,3 +11,20 @@ Singh Rajat
   
 <br>
   <hr>
+  
+  <!DOCTYPE html>
+
+Hello 
+
+<hr>
+<br>
+
+<img src="project.jpg">
+
+<br>
+
+<iframe width="560" height="315" src="https://www.youtube.com/embed/ro6nXO3H4Ak" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+
+<hr>
+<hr>
+
